--- a/lib/l10n2/app_fr.arb
+++ b/lib/l10n2/app_fr.arb
@@ -593,7 +593,7 @@
   "@reviewClaimDetails": {
     "description": "Header for reviewing claim details"
   },
-  "noFlightsMatchingFilter": "TODO: Translate 'No flights matching filter: {filter}'",
+  "noFlightsMatchingFilter": "Aucun vol correspondant au filtre : {filter}",
   "@noFlightsMatchingFilter": {
     "description": "Message shown when no flights match the filter",
     "placeholders": {
@@ -619,20 +619,20 @@
   "@errorLoadingClaim": {
     "description": "Error message when claim loading fails"
   },
-  "forceRefreshData": "TODO: Translate 'Force Refresh Data'",
+  "forceRefreshData": "Forcer l’actualisation des données",
   "@forceRefreshData": {
     "description": "Tooltip for refresh button"
   },
-  "forcingFreshDataLoad": "TODO: Translate 'Forcing fresh data load...'",
-  "loadingExternalData": "TODO: Translate 'Loading External Data'",
+  "forcingFreshDataLoad": "Forçage du chargement des données…",
+  "loadingExternalData": "Chargement des données externes",
   "@loadingExternalData": {
     "description": "Title for loading screen"
   },
-  "loadingExternalDataDescription": "TODO: Translate 'Please wait while we fetch the latest flight data...'",
+  "loadingExternalDataDescription": "Veuillez patienter pendant que nous récupérons les dernières données de vol…",
   "@loadingExternalDataDescription": {
     "description": "Message when loading external data"
   },
-  "lastHours": "TODO: Translate 'Last {hours} Hours'",
+  "lastHours": "Dernières {hours} heures",
   "@lastHours": {
     "description": "Time period label for flight list",
     "placeholders": {
@@ -642,15 +642,15 @@
       }
     }
   },
-  "apiConnectionIssue": "TODO: Translate 'API Connection Issue'",
+  "apiConnectionIssue": "Problème de connexion à l’API",
   "@apiConnectionIssue": {
     "description": "Title for API connection issue"
   },
-  "noEligibleFlightsFound": "TODO: Translate 'No Eligible Flights Found'",
+  "noEligibleFlightsFound": "Aucun vol éligible trouvé",
   "@noEligibleFlightsFound": {
     "description": "Message when no eligible flights are found"
   },
-  "noEligibleFlightsDescription": "TODO: Translate 'No flights eligible for EU compensation were found in the last {hours} hours. Check again later.'",
+  "noEligibleFlightsDescription": "Aucun vol éligible à la compensation UE n’a été trouvé au cours des dernières {hours} heures. Réessayez plus tard.",
   "@noEligibleFlightsDescription": {
     "description": "Description when no eligible flights are found",
     "placeholders": {
@@ -660,95 +660,115 @@
       }
     }
   },
-  "networkError": "TODO: Translate 'Network Error'",
+  "networkError": "Erreur réseau",
   "@networkError": {
     "description": "Generic network error message"
   },
-  "generalError": "TODO: Translate 'General Error'",
+  "generalError": "Erreur générale",
   "@generalError": {
     "description": "Generic error message"
   },
-  "loginRequiredForClaim": "TODO: Translate 'Login Required for Claim'",
+  "loginRequiredForClaim": "Connexion requise pour la réclamation",
   "@loginRequiredForClaim": {
     "description": "Message indicating login is required to submit a claim"
   },
-  "emailAddress": "TODO: Translate 'Email Address'",
+  "emailAddress": "Adresse e-mail",
   "@emailAddress": {
     "description": "Label for email address field"
   },
-  "documentDeleteFailed": "TODO: Translate 'Failed to delete document'",
+  "documentDeleteFailed": "Échec de la suppression du document",
   "@documentDeleteFailed": {
     "description": "Error message shown when document deletion fails"
   },
-  "uploadNew": "TODO: Translate 'Upload New'",
+  "uploadNew": "Télécharger un nouveau document",
   "@uploadNew": {
     "description": "Label for upload new document button"
   },
-  "continueAction": "TODO: Translate 'Continue'",
+  "continueAction": "Continuer",
   "@continueAction": {
     "description": "Label for continue button"
   },
-  "passengerInformation": "TODO: Translate 'Passenger Information'",
+  "passengerInformation": "Informations du passager",
   "@passengerInformation": {
     "description": "Header for passenger information section"
   },
-  "fullName": "TODO: Translate 'Full Name'",
+  "fullName": "Nom complet",
   "@fullName": {
     "description": "Label for full name field"
   },
-  "downloadPdf": "TODO: Translate 'Download PDF'",
+  "downloadPdf": "Télécharger le PDF",
   "@downloadPdf": {
     "description": "Label for download PDF button"
   },
-  "filePreviewNotAvailable": "TODO: Translate 'File preview not available'",
+  "filePreviewNotAvailable": "Aperçu du fichier non disponible",
   "@filePreviewNotAvailable": {
     "description": "Message shown when file preview is not available"
   },
-  "deleteDocument": "TODO: Translate 'Delete Document'",
+  "noFileSelected": "Aucun fichier sélectionné",
+  "@noFileSelected": {
+    "description": "Snackbar message when user cancels or no file is chosen"
+  },
+  "preview": "Aperçu",
+  "@preview": {
+    "description": "Tooltip label for preview icon button"
+  },
+  "downloadStarting": "Démarrage du téléchargement...",
+  "@downloadStarting": {
+    "description": "Snackbar message shown when a download starts"
+  },
+  "fileTypeLabel": "Type de fichier :",
+  "@fileTypeLabel": {
+    "description": "Label prefix for file type in preview fallback"
+  },
+  "failedToLoadImage": "Échec du chargement de l'image",
+  "@failedToLoadImage": {
+    "description": "Error text when an image fails to load"
+  },
+  "deleteDocument": "Supprimer le document",
   "@deleteDocument": {
     "description": "Title for delete document confirmation dialog"
   },
-  "deleteDocumentConfirmation": "TODO: Translate 'Are you sure you want to delete this document?'",
+  "deleteDocumentConfirmation": "Voulez-vous vraiment supprimer ce document ?",
   "@deleteDocumentConfirmation": {
     "description": "Confirmation message for document deletion"
   },
-  "delete": "TODO: Translate 'Delete'",
+  "delete": "Supprimer",
   "@delete": {
     "description": "Label for delete button"
   },
-  "documentDeletedSuccess": "TODO: Translate 'Document deleted successfully'",
+  "documentDeletedSuccess": "Document supprimé avec succès",
   "@documentDeletedSuccess": {
     "description": "Message shown when document is deleted successfully"
   },
-  "attachDocuments": "TODO: Translate 'Attach Documents'",
+  "attachDocuments": "Joindre des documents",
   "@attachDocuments": {
     "description": "Title for document attachment screen"
   },
-  "uploadingDocument": "TODO: Translate 'Uploading document...'",
+  "uploadingDocument": "Téléchargement du document...",
   "@uploadingDocument": {
     "description": "Text shown when a document is being uploaded"
   },
-  "noDocuments": "TODO: Translate 'No documents uploaded yet'",
+  "noDocuments": "Aucun document téléchargé pour le moment",
   "@noDocuments": {
     "description": "Text shown when no documents have been uploaded"
   },
-  "uploadFirstDocument": "TODO: Translate 'Upload First Document'",
+  "uploadFirstDocument": "Télécharger le premier document",
   "@uploadFirstDocument": {
     "description": "Button text to upload the first document"
   },
-  "claimAttachment": "TODO: Translate 'Claim Attachment'",
+  "claimAttachment": "Pièce jointe à la réclamation",
   "@claimAttachment": {
     "description": "Default name for claim attachments"
   },
-  "pdfPreviewMessage": "TODO: Translate 'PDF Preview'",
+  "pdfPreviewMessage": "Aperçu du PDF",
   "@pdfPreviewMessage": {
     "description": "Message shown when viewing a PDF preview"
   },
-  "tipsAndRemindersTitle": "TODO: Translate 'Tips & Reminders'",
+  "tipsAndRemindersTitle": "Conseils et rappels",
   "@tipsAndRemindersTitle": {
     "description": "Title for tips and reminders section"
   },
-  "tipSecureData": "TODO: Translate 'Your data is secure and encrypted'",
+  "tipSecureData": "Vos données sont sécurisées et chiffrées",
   "@tipSecureData": {
     "description": "Tip about data security"
   },
@@ -820,79 +840,79 @@
   "@validatorFlightNumberRequired": {
     "description": "Validation message when flight number is empty"
   },
-  "tooltipFlightNumberQuickClaim": "TODO: Translate 'Enter the flight number for your claim'",
+  "tooltipFlightNumberQuickClaim": "Saisissez le numéro de vol de votre réclamation",
   "@tooltipFlightNumberQuickClaim": {
     "description": "Tooltip for flight number field in quick claim form"
   },
-  "tooltipFlightDateQuickClaim": "TODO: Translate 'Select the date of your flight'",
+  "tooltipFlightDateQuickClaim": "Sélectionnez la date de votre vol",
   "@tooltipFlightDateQuickClaim": {
     "description": "Tooltip for flight date field in quick claim form"
   },
-  "departureAirportHintQuickClaim": "TODO: Translate 'Enter airport code or name (e.g. LHR, London Heathrow)'",
+  "departureAirportHintQuickClaim": "Entrez le code ou le nom de l’aéroport (ex. LHR, London Heathrow)",
   "@departureAirportHintQuickClaim": {
     "description": "Helper text for departure airport field in quick claim form"
   },
-  "validatorDepartureAirportRequired": "TODO: Translate 'Departure airport is required'",
+  "validatorDepartureAirportRequired": "L’aéroport de départ est requis",
   "@validatorDepartureAirportRequired": {
     "description": "Validation message when departure airport is empty"
   },
-  "underAppeal": "TODO: Translate 'Under Appeal'",
+  "underAppeal": "En appel",
   "@underAppeal": {
     "description": "Status label for a claim that is under appeal"
   },
-  "unknown": "TODO: Translate 'Unknown Status'",
+  "unknown": "Inconnu",
   "@unknown": {
     "description": "Status label for a claim with unknown status"
   },
-  "errorMustBeLoggedIn": "TODO: Translate 'You must be logged in to submit a claim'",
+  "errorMustBeLoggedIn": "Vous devez être connecté pour soumettre une réclamation",
   "@errorMustBeLoggedIn": {
     "description": "Error message shown when trying to access the claim form without being logged in"
   },
-  "dialogTitleError": "TODO: Translate 'Error'",
+  "dialogTitleError": "Erreur",
   "@dialogTitleError": {
     "description": "Title for error dialog boxes"
   },
-  "dialogButtonOK": "TODO: Translate 'OK'",
+  "dialogButtonOK": "OK",
   "@dialogButtonOK": {
     "description": "OK button text for dialog boxes"
   },
-  "quickClaimTitle": "TODO: Translate 'Quick Claim Form'",
+  "quickClaimTitle": "Réclamation rapide",
   "@quickClaimTitle": {
     "description": "Title for the quick claim screen"
   },
-  "quickClaimInfoBanner": "TODO: Translate 'Fill out this form to submit a quick compensation claim for your flight. We'll help you through the process.'",
+  "quickClaimInfoBanner": "Remplissez ce formulaire pour soumettre rapidement une demande d’indemnisation pour votre vol. Nous vous guiderons tout au long du processus.",
   "@quickClaimInfoBanner": {
     "description": "Information banner text at the top of quick claim form"
   },
-  "createClaim": "TODO: Translate 'Create New Claim'",
+  "createClaim": "Créer une nouvelle réclamation",
   "@createClaim": {
     "description": "Button label for creating a new claim"
   },
-  "submitted": "TODO: Translate 'Submitted'",
+  "submitted": "Soumise",
   "@submitted": {
     "description": "Status label for a submitted claim"
   },
-  "inReview": "TODO: Translate 'In Review'",
+  "inReview": "En cours d’examen",
   "@inReview": {
     "description": "Status label for a claim being reviewed"
   },
-  "processing": "TODO: Translate 'Processing'",
+  "processing": "Traitement en cours",
   "@processing": {
     "description": "Status label for a claim being processed"
   },
-  "approved": "TODO: Translate 'Approved'",
+  "approved": "Approuvée",
   "@approved": {
     "description": "Status label for an approved claim"
   },
-  "rejected": "TODO: Translate 'Rejected'",
+  "rejected": "Rejetée",
   "@rejected": {
     "description": "Status label for a rejected claim"
   },
-  "paid": "TODO: Translate 'Paid'",
+  "paid": "Payée",
   "@paid": {
     "description": "Status label for a paid claim"
   },
-  "flightRouteDetails": "TODO: Translate '{departure} to {arrival}'",
+  "flightRouteDetails": "{departure} vers {arrival}",
   "@flightRouteDetails": {
     "description": "Format for displaying flight route details",
     "placeholders": {
@@ -906,19 +926,19 @@
       }
     }
   },
-  "authenticationRequired": "TODO: Translate 'Authentication Required'",
+  "authenticationRequired": "Authentification requise",
   "@authenticationRequired": {
     "description": "Message shown when authentication is required to view claims"
   },
-  "errorLoadingClaims": "TODO: Translate 'Error loading claims'",
+  "errorLoadingClaims": "Erreur lors du chargement des réclamations",
   "@errorLoadingClaims": {
     "description": "Error message when claims cannot be loaded"
   },
-  "loginToViewClaimsDashboard": "TODO: Translate 'Please log in to view your claims dashboard'",
+  "loginToViewClaimsDashboard": "Connectez-vous pour voir votre tableau de bord des réclamations",
   "@loginToViewClaimsDashboard": {
     "description": "Message prompting user to log in to view claims dashboard"
   },
-  "logIn": "TODO: Translate 'Log In'",
+  "logIn": "Se connecter",
   "@logIn": {
     "description": "Button label for logging in"
   },
